  ${PATCHIMAGE_RIIVOLUTION_DIR} for patch files
- functions for applying IPS, PPF and BPS patches thus only fail when they
  neither find a zip archive containing the patch, or the bare patch file
- HANS patcher now supports applying DELTA patches
- split out messages into message.sh

::bug fixes
- Pokemon Star Sapphire was accidently called Alpha Sapphire in the menu,
  also had wrong Short ID

::command line parameters
- add batch building short cuts for --game parameter:
  * NSMB_ALL	build all NSMB Mods
  * PKMN_ALL	build all Pokemon X, Y, Omega Ruby and Alpha Sapphire Mod
  * PKMN_X	build all Pokemon X Mods
  * PKMN_Y	build all Pokemon Y Mods
  * PKMN_OR	build all Pokemon Omega Ruby Mods
  * PKMN_AS	build all Pokemon Alpha Sapphire Mods
- add --list-requirements ; show a detailed list of expected game images and
  Riivolution or HANS archives or Patches required for building
- add --list-requirements-nsmb, --list-requirements-mkwiimmfi,
  --list-requirements-tokyo, --list-requirements-kirby,
  --list-requirements-pokemon, --list-requirements-3ds,
  --list-requirements-other, to show only requirements for mods of specific
  base games
- add --show-download ; only show download like for games choosen in menu or
  given using --game parameter
- added --list-games-nsmb, --list-games-mkwiimmfi, --list-games-tokyo,
  --list-games-kirby, --list-games-pokemon, --list-games-3ds, --list-games-other
  to show only mods for specific base games

::misc. changes
- new download link for The Legend of Yoshi

::game additions

:::Pokemon
- add support for Pokemon Red Ruby
  - supply HANS configuration files for Red Ruby
- add support for Pokemon Delta Emerald (patch for Alpha Sapphire)
  - supply HANS configuration files for Delta Emerald
  - since the author of Delta Emerald is working on a patch for Omega Ruby
    aswell, the game and created files are called "DeltaEmerald-AS"
    [obviously they will be "DeltaEmerald-OR" for patched Omega Ruby]

v7.1.0:
::internal changes